--- a/src/resource/views/components/site/login.hbs
+++ b/src/resource/views/components/site/login.hbs
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    <script type="module" src="/static/js/login.js"></script>
+    <script type="module" src="/static/js/user/login.js"></script>
 </body>
 
 </html>
