--- a/src/resource/views/components/users/userDetail.hbs
+++ b/src/resource/views/components/users/userDetail.hbs
@@ -73,7 +73,7 @@
             </form>
         </div>
     </div>
-    <script type="module" src="/static/js/userDetail.js"></script>
+    <script type="module" src="/static/js/user/userDetail.js"></script>
 </body>
 
 </html>
