--- a/src/resource/views/components/courses/course.hbs
+++ b/src/resource/views/components/courses/course.hbs
@@ -19,66 +19,16 @@
 
         <table class="table">
             <thead class="thead-dark">
-                <tr id="course-table-header">
-                    {{!-- <th scope="col">#</th>
-                    <th scope="col">Tên khóa học</th>
-                    <th scope="col">Tác giả</th>
-                    <th scope="col">loại khóa học</th>
-                    <th scope="col">Giá khóa học</th>
-                    <th scope="col">Ngày tạo</th>
-                    <th scope="col">Lần cập nhật cuối cùng</th>
-                    <th scope="col">Chúc năng</th> --}}
-                </tr>
+                <tr id="course-table-header"></tr>
             </thead>
-            <tbody id="course-table-body">
-                {{!-- <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
-                </tr> --}}
-            </tbody>
+            <tbody id="course-table-body"></tbody>
         </table>
     </div>
     <nav aria-label="Page navigation example">
         <ul class="pagination d-flex align-items-center justify-content-center"></ul>
     </nav>
 
-    <script type="module" src="/static/js/course.js"></script>
+    <script type="module" src="/static/js/course/course.js"></script>
 </body>
 
 </html>
