--- a/src/resource/views/components/users/index.hbs
+++ b/src/resource/views/components/users/index.hbs
@@ -41,7 +41,7 @@
         </nav>
     </div>
 
-    <script type="module" src="/static/js/user.js"></script>
+    <script type="module" src="/static/js/user/user.js"></script>
 </body>
 
 </html>
