--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -88,16 +88,60 @@
         content: "/";
         margin: 0px 3px; }
 
-.table {
-  margin-top: 15px; }
-  .table .thead-dark tr th {
-    font-size: 12px;
+.page-main {
+  box-shadow: 0 0 2px #00000030;
+  margin: 15px 0px;
+  padding: 15px; }
+  .page-main .page-main--header .header-title {
+    font-size: 25px;
+    font-weight: 700;
     text-transform: uppercase; }
-  .table tbody td {
-    font-size: 15px;
-    vertical-align: middle; }
-    .table tbody td .btn a {
-      color: #ffffff; }
+  .page-main .page-main--header .header-router-link-detail {
+    border-radius: 5px;
+    background-color: #f28d0f;
+    color: white;
+    font-weight: 700;
+    margin-bottom: 10px;
+    padding: 10px; }
+  .page-main .page-main-body {
+    margin-bottom: 0px; }
+    .page-main .page-main-body tbody {
+      border: 1px solid #00000014; }
+      .page-main .page-main-body tbody .btn-edit {
+        border-radius: 5px;
+        background-color: #f28d0f;
+        color: white;
+        padding: 10px; }
+      .page-main .page-main-body tbody .btn-delete {
+        border-radius: 5px;
+        background-color: #f28d0f;
+        color: white;
+        padding: 10px; }
+
+.page-detail {
+  box-shadow: 0 0 2px #00000030;
+  margin-top: 15px;
+  padding: 15px; }
+  .page-detail .page-detail--title {
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 15px;
+    text-transform: uppercase; }
+  .page-detail .page-detail-form .form-group .form-group--label {
+    font-size: 16px; }
+  .page-detail .page-detail-form .btn-executed {
+    background-color: #f28d0f;
+    color: white; }
+
+.table .thead-dark tr th {
+  font-size: 12px;
+  text-transform: uppercase; }
+
+.table tbody td {
+  font-size: 15px;
+  vertical-align: middle; }
+  .table tbody td .btn a {
+    color: #ffffff; }
 
 footer {
   background-color: #031b3d;
