--- a/src/resource/views/components/courses/courseDetail.hbs
+++ b/src/resource/views/components/courses/courseDetail.hbs
@@ -1,10 +1,74 @@
-<div class="container py-5 my-5">
-    <form method="POST" enctype="multipart/form-data">
-        <div class="row">
-            <div class="col-6">
-                <input type="file" name="image">
-            </div>
-            <div class="col-6"><button type="submit">upload file</button></div>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <div class="container">
+        <div class="breadcrumd">
+            <ul class="list-unstyled">
+                <li><a href="/home">Trang chủ</a></li>
+                <li><a href="/courses">Khóa học</a></li>
+                <li><span>Chi tiết</span></li>
+            </ul>
         </div>
-    </form>
-</div>
+        <div class="page-detail">
+            <h2 class="page-detail--title">Thông tin khóa học</h2>
+            <form class="page-detail-form">
+                <div class="row">
+                    <div class="col-6">
+                        <div class="form-group">
+                            <label class="form-group--label" for="course-code">Mã khóa học</label>
+                            <input type="text" class="form-control" id="course-code">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-group--label" for="course-name">Tên khóa học</label>
+                            <input type="text" class="form-control" id="course-name">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-group--label" for="course-type">Loại khóa học</label>
+                            <input type="email" class="form-control" id="course-type">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-group--label" for="course-lesson">Số bài giảng hiện có</label>
+                            <input type="email" class="form-control" id="course-lesson" aria-describedby="emailHelp">
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="form-group">
+                            <label class="form-group--label" for="course-author">Tác giả</label>
+                            <input type="email" class="form-control" id="course-author">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-group--label" for="course-create-date">Ngày tạo</label>
+                            <input type="email" class="form-control" id="course-create-date">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-group--label" for="course-edit-last-date">Cập nhật gần đây</label>
+                            <input type="email" class="form-control" id="course-edit-last-date"
+                                aria-describedby="emailHelp">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-group--label" for="course-thumbnail">Ảnh đại diện khóa học</label>
+                            <input type="email" class="form-control" id="course-thumbnail" aria-describedby="emailHelp">
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="form-group">
+                            <label class="form-group--label" for="course-description">Mô tả khóa học</label>
+                            <textarea class="form-control" id="course-description" rows="3"></textarea>
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="btn-executed btn">Submit</button>
+            </form>
+        </div>
+    </div>
+</body>
+
+</html>
