--- a/src/resource/views/components/courses/courseDetail.hbs
+++ b/src/resource/views/components/courses/courseDetail.hbs
@@ -24,7 +24,7 @@
                     <div class="col-6">
                         <div class="form-group">
                             <label class="form-group--label" for="course-code">Mã khóa học</label>
-                            <input type="text" class="form-control" id="course-code">
+                            <input type="text" class="form-control" id="course-code" disabled placeholder="Mã code">
                         </div>
                         <div class="form-group">
                             <label class="form-group--label" for="course-name">Tên khóa học</label>
