#Commit 21/03/2022: Add method new - delete course and refactor FE user page

--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -1,6 +1,10 @@
 @import "_variables.scss";
 
 // HOME PAGE
+.main-body {
+    min-height: 85vh;
+}
+
 .home_title {
     background-color: $red-color;
     color: $red-color;
