--- a/src/resource/views/components/users/user.hbs
+++ b/src/resource/views/components/users/user.hbs
@@ -19,15 +19,15 @@
             </ul>
         </div>
 
-        <div class="user my-3">
-            <div class="d-flex align-items-center justify-content-between">
-                <h3 class="title-table">Thông tin người dùng</h3>
-                <button class="btn btn-primary add-user" id="create-btn">
+        <div class="page-main">
+            <div class="page-main--header d-flex align-items-center justify-content-between">
+                <h3 class="header-title">Thông tin người dùng</h3>
+                <a class="header-router-link-detail" href="/users/detail?type=create">
                     <i class="fa fa-plus mr-2" aria-hidden="true"></i>
-                    <a href="/users/detail?type=create">Thêm mới</a>
-                </button>
+                    Thêm mới
+                </a>
             </div>
-            <table class="table mb-0" id="user-table">
+            <table class="page-main-body table">
                 <thead class="thead-dark">
                     <tr id="user-table-header"></tr>
                 </thead>
