--- a/src/resource/views/partials/footer.hbs
+++ b/src/resource/views/partials/footer.hbs
@@ -44,7 +44,7 @@
                 Bạn có chắc muốn xóa người dùng này!!!
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" id="delete-user">Cập nhật</button>
+                <button type="button" class="btn btn-danger" id="delete-document">Cập nhật</button>
                 <button type="button" class="btn btn-primary" id="delete-user-close" data-dismiss="modal">Hủy</button>
             </div>
         </div>
