--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -158,6 +158,15 @@
             }
         }
     }
+    .undefine-data {
+        border: 1px solid #ddd;
+        letter-spacing: .3px;
+        font-size: 20px;
+        font-weight: 700;
+        padding: 30px 15px;
+        text-align: center;
+        text-transform: uppercase;
+    }
 }
 
 // PAGE DETAIL
