#Commit 23/03/2022: Add unit page detail and router redirect page

--- a/src/resource/views/components/courses/course.hbs
+++ b/src/resource/views/components/courses/course.hbs
@@ -31,6 +31,7 @@
                 </thead>
                 <tbody id="course-table-body"></tbody>
             </table>
+            <div class="undefine-data">Không có nội dung phù hợp</div>
         </div>
     </div>
     <nav aria-label="Page navigation example">
