--- a/src/resource/views/components/courses/unit.hbs
+++ b/src/resource/views/components/courses/unit.hbs
@@ -22,7 +22,7 @@
         <div class="page-main">
             <div class="page-main--header d-flex align-items-center justify-content-between">
                 <h2 class="header-title">Chương học hiện có</h2>
-                <a class="header-router-link-detail" href="/courses/detail?type=create">
+                <a class="header-router-link-detail">
                     <i class="fa fa-plus mr-2" aria-hidden="true"></i>
                     Thêm mới
                 </a>
@@ -32,8 +32,8 @@
                     <tr id="unit-table-header"></tr>
                 </thead>
                 <tbody id="unit-table-body"></tbody>
-                {{!-- <div class="undefine-data">Không có nội dung phù hợp</div> --}}
             </table>
+            <div class="undefine-data">Không có nội dung phù hợp</div>
         </div>
     </div>
     <nav aria-label="Page navigation example">
