--- a/src/resource/views/components/users/user.hbs
+++ b/src/resource/views/components/users/user.hbs
@@ -33,6 +33,7 @@
                 </thead>
                 <tbody id="user-table-body"></tbody>
             </table>
+            <div class="undefine-data">Không có nội dung phù hợp</div>
         </div>
 
         <!-- Pagination -->
