--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -122,12 +122,15 @@
         padding: 10px; }
   .page-main .undefine-data {
     border: 1px solid #ddd;
+    display: none;
     letter-spacing: .3px;
     font-size: 20px;
     font-weight: 700;
     padding: 30px 15px;
     text-align: center;
     text-transform: uppercase; }
+    .page-main .undefine-data.active {
+      display: block; }
 
 .page-detail {
   box-shadow: 0 0 2px #00000030;
