--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -160,12 +160,16 @@
     }
     .undefine-data {
         border: 1px solid #ddd;
+        display: none;
         letter-spacing: .3px;
         font-size: 20px;
         font-weight: 700;
         padding: 30px 15px;
         text-align: center;
         text-transform: uppercase;
+        &.active {
+            display: block;
+        }
     }
 }
 
