#Commit 24/03/2022: Add method new - edit - remove and refactor resource

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -90,6 +90,8 @@
         display: inline-block;
         content: "/";
         margin: 0px 3px; }
+      .breadcrumd ul li .back-page-unit {
+        cursor: pointer; }
 
 .page-main {
   box-shadow: 0 0 2px #00000030;
