--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -116,6 +116,9 @@
                 content: "/";
                 margin: 0px 3px;
             }
+            .back-page-unit {
+                cursor: pointer;
+            }
         }
     }
 }
