#Commit 26/03/2022: Add method update and delete of lesson page

--- a/src/resource/views/components/courses/lessonDetail.hbs
+++ b/src/resource/views/components/courses/lessonDetail.hbs
@@ -15,8 +15,8 @@
                 <li><a href="/home">Trang chủ</a></li>
                 <li><a href="/courses">Khóa học</a></li>
                 <li><a href="/courses">Chương học</a></li>
-                <li><a id="go-back" href="#">Bài học</a></li>
-                <li><span>Chi tiết bài học</span></li>
+                <li><a id="go-back" href="#">Học phần</a></li>
+                <li><span>Chi tiết học phần</span></li>
             </ul>
         </div>
         <div class="page-detail">
