--- a/src/resource/views/components/courses/unitDetail.hbs
+++ b/src/resource/views/components/courses/unitDetail.hbs
@@ -14,7 +14,7 @@
             <ul class="list-unstyled">
                 <li><a href="/home">Trang chủ</a></li>
                 <li><a href="/courses">Khóa học</a></li>
-                <li><a class="back-page-unit">Học phần</a></li>
+                <li><a class="go-back">Chương học</a></li>
                 <li><span>Chi tiết</span></li>
             </ul>
         </div>
