#Commit 26/03/2022: Refactor router lesson to unit

--- a/src/resource/views/components/courses/lesson.hbs
+++ b/src/resource/views/components/courses/lesson.hbs
@@ -15,7 +15,7 @@
             <ul class="list-unstyled">
                 <li><a href="/home">Trang chủ</a></li>
                 <li><a href="/courses">Khóa học</a></li>
-                <li><a id="go-back" href="#">Chương học</a></li>
+                <li><a id="go-back">Chương học</a></li>
                 <li><span>Học phần</span></li>
             </ul>
         </div>
