#Commit 26/03/2022: Add margin-right router-childrent

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -117,6 +117,8 @@
         background-color: #f28d0f;
         color: white;
         padding: 10px; }
+      .page-main .page-main-body tbody .router-child {
+        margin-right: 4px; }
       .page-main .page-main-body tbody .btn-delete {
         border-radius: 5px;
         background-color: #f28d0f;
