--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -153,6 +153,9 @@
                 color: white;
                 padding: 10px;
             }
+            .router-child {
+                margin-right: 4px;
+            }
             .btn-delete {
                 border-radius: 5px;
                 background-color: #f28d0f;
