--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -16,6 +16,10 @@
         <img src="/static/img/loader.gif" alt="loader">
     </div>
 
+    <div class="modal-toasts">
+        <p class="toasts-content"></p>
+    </div>
+
     {{#if show }}
     {{> header}}
     {{/if}}
