--- a/src/resource/views/components/site/home.hbs
+++ b/src/resource/views/components/site/home.hbs
@@ -21,7 +21,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a id="user-signout">
                                 <i class="fa fa-power-off" aria-hidden="true"></i>
                                 <span>Đăng xuất</span>
                             </a>
@@ -65,6 +65,7 @@
             </div>
         </div>
     </div>
+    <script type="module" src="/static/js/main.js"></script>
 </body>
 
 </html>
